# pywinput

./: README.md  pyproject.toml
pywinput/: __init__.py  constants.py  keyboard.py  logger.py  mouse.py  structures.py  win_mouse.py  window.py  window_class.py
tests/: conftest.py  test_keyboard.py  test_mouse.py  test_window.py  test_window_class.py
