[tool.poetry]
name = "pywinput"
version = "0.1.0"
description = ""
authors = ["Kyle Oliver <oliverke@mail.uc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^304"
keyboard = "^0.13.5"
mouse = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
